--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,16 @@ coverage==7.3.0
 dj-database-url==2.1.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.20
+django-allauth==0.55.2
 gunicorn==21.2.0
+oauthlib==3.2.2
 Pillow==10.0.0
 psycopg2==2.9.7
+PyJWT==2.8.0
 pylint-django==2.5.3
 pylint-plugin-utils==0.8.2
+python3-openid==3.2.0
+pytz==2023.3.post1
+requests-oauthlib==1.3.1
 sqlparse==0.4.4
 urllib3==1.26.16
